--- a/data/queried/DOAJ/.gitignore
+++ b/data/queried/DOAJ/.gitignore
@@ -1,4 +1,4 @@
 all_dois.json
-articles_without_doi.json
+../../errors/articles_without_dois/articles_without_doi.json
 doi.json
 doi_articles_journals.pickle
